package com.jacobgain.triprabbit.core.model

import java.time.Instant

const val VEHICLE_NAME_MAX_LENGTH = 25

enum class DistanceUnit(val abbreviation: String) { KILOMETERS("km"), MILES("mi") }

data class Vehicle(
    val id: Long,
    val name: String,
    val make: String?,
    val model: String?,
...
